apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: default
  labels:
    app: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  # replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: jellyfin
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin
          ports:
            - containerPort: 8096
              name: jellyfin
          volumeMounts:
            - name: media
              mountPath: /media
            - name: config
              mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /home/ad/homelab/config/jellyfin
        - name: media
          hostPath:
            path: /home/ad/homelab/data/media
      restartPolicy: Always
---
